# ERCP-03-Robot

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  robot.sln
RobotSystem/: RobotSystem.vcxproj  RobotSystem.vcxproj.filters  config-simu.yaml  config.yaml  main.cpp
RobotSystem/Net/: server.cpp  server.h  server.handler.cpp  server.handler.h  server.interface.cpp  server.interface.h
RobotSystem/RPC/: ArmModule.Actions.cpp  ArmModule.cpp  ArmModule.hpp  Module.hpp
RobotSystem/Robot/: YunSBot.Base.cpp  YunSBot.ControlChannel.cpp  YunSBot.Ms.Local.cpp  YunSBot.Ms.Remote.cpp  YunSBot.SituAware.Local.cpp  YunSBot.UdpV2.cpp  YunSBot.Visual.Local.cpp  YunSBot.Visual.Remote.cpp  YunSBot.h
RobotSystem/Robot/Kinematics/: CutterNdiTracker.hpp  CutterNdiTracker.hpp0  EndoScopy.cpp  EndoScopy.h  RobotArm.cpp  RobotArm.h  RobotArm_v2.cpp  RobotArm_v2.h  RobotBase.cpp  RobotBase.h
RobotSystem/Robot/Motions/: Motions.Config.Auhua.cpp  Motions.Config.AuhuaDuodenum.cpp  Motions.Config.cpp  Motions.Cycles.cpp  Motions.MoveArm.cpp  Motions.StartStop.cpp
docs/: robot-udp-v2.md
include/include/: beckhoff_snapshot.hpp  fsm.hpp  module_clr.h  prop.hpp  robot_udp_v2_runtime.hpp  rvl.h  task.hpp  yunsbot_config.h
include/include/net/: .clang-format  decoder.hpp  encoder.hpp  helper.hpp  ipc_reader.hpp  ipc_sender.hpp  packet.hpp  serialize.hpp  streamer.hpp  types.hpp  udp_client.hpp  udp_server.hpp
include/include/protocol/: robot_udp_v2.hpp
include/include/vision/: camera.hpp  helper.hpp  network.hpp  numpy.h  utils.hpp
include/src/: prop.cpp
msbuild/dependencies/: Beckhoff.props  Boost.props  Eigen.props  FFmpeg.props  OpenCV.props  Poco.props  Sophus.props  Tbb.props  Yaml.props
plugins/lib/drivers/dep/include/: robot_config.h  utils.h
plugins/lib/drivers/dep/src/: utils.cpp
plugins/lib/drivers/src/: Device.hpp  beckhoff_driver.cpp  beckhoff_driver.hpp
plugins/lib/navi_mods/: CMakeLists.txt  navi_mods.vcxproj
plugins/lib/navi_mods/Module/: action.cpp  action.hpp  dll_export.h  dll_import.h  linker.cpp  linker.h  modules.cpp  modules.h  packet.h  types.h
plugins/lib/net_mods/: CMakeLists.txt  ipc_decoder.cpp  ipc_encoder.cpp  net_mods.vcxproj  udp_decoder.cpp  udp_encoder.cpp
plugins/lib/remote/: CMakeLists.txt  Remote.vcxproj  Remote.vcxproj.filters  RemoteCpu.vcxproj  RemoteCpu.vcxproj.filters
plugins/plugins/Nodify.Shared/: Nodify.Shared.csproj
plugins/plugins/Nodify.Shared/Themes/: Controls.xaml  Generic.xaml  Icons.xaml
plugins/robot/robot_device/: robot_device.vcxproj  robot_device.vcxproj.filters  robot_devices.h  robot_error.h  robot_settings.hpp
plugins/robot/robot_device/include/: settings.hpp
plugins/robot/robot_device/src/: AmpPDO.cpp  robot_device.cpp  robot_device_inner.hpp  robot_error.cpp  robot_settings.cpp
plugins/scesr220110/: .gitignore  SCESR.vcxproj  SCESR.vcxproj.filters  Settings.cpp  Settings.hpp  config_template.yaml  main.cpp
plugins/scesr220110/CV/: cvtask.cpp  cvtask.hpp  cvui.cpp  cvui.hpp  ffmpeg.h  ffmpeg_capture.hpp  recog.cpp  recog.hpp  track.hpp  videolist.cpp  videolist.h
plugins/scesr220110/CV/module/: elm.hpp  elml.hpp  frcnn.cpp  frcnn.hpp  nanodet.cpp  nanodet.hpp  nms.hpp  ocsvm.hpp  recognize.hpp  utils.hpp
plugins/scesr220110/Robot/: Ms.cpp  Ms.hpp  VBot.cpp  VBot.hpp  WinJoyApi.h  YunSBot.Visual.Local.cpp
properties/: Digitopo.Debug.props  Digitopo.Release.props  Digitopo.Visual.Release.props  Drivers.Debug.props  Drivers.Release.props  Enviroment.Debug.props  Enviroment.Release.props  Solution.props  Torch.Debug.props  Torch.Release.props  Vision.Cpu.Debug.props  Vision.Cpu.Release.props  Vision.Debug.props  Vision.Release.props  Visualize.Debug.props  Visualize.Release.props
tests/RobotUdpV2Regression/: RobotUdpV2Regression.vcxproj  main.cpp
